# vs-noise

./: MANIFEST.in  README.md  hatch_build.py  meson.build  pyproject.toml  setup.py
.github/workflows/: build.yml  pypipublish.yml
AddNoise/: AddNoise.cpp  AddNoise.h  AddNoise_AVX2.cpp  AddNoise_AVX512.cpp  AddNoise_SSE2.cpp  pcg.h  perlin.cpp  perlin.h  poisson.h  simplex.cpp  simplex.h
vsnoise/: __init__.py
