[build-system]
requires = ["hatchling", "packaging", "meson", "ninja", "vapoursynth>=74"]
build-backend = "hatchling.build"

[project]
name = "vsnoise"
version = "1.1"
readme = "README.md"
license-files = ["LICENSE"]
dependencies = ["vapoursynth>=74"]

[tool.hatch.build.targets.wheel]
include = ["vapoursynth/plugins"]
artifacts = [
    "vapoursynth/plugins/*.dylib",
    "vapoursynth/plugins/*.so",
    "vapoursynth/plugins/*.dll",
]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"
