[build-system]
requires = ["hatchling", "packaging", "meson", "ninja", "vapoursynth>=74"]
build-backend = "hatchling.build"

[project]
name = "vsnoise"
version = "1.2.1"
readme = "README.md"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = ["vapoursynth>=74"]

[tool.hatch.build.targets.wheel]
include = ["vapoursynth/plugins"]
artifacts = [
    "vapoursynth/plugins/*.dylib",
    "vapoursynth/plugins/*.so",
    "vapoursynth/plugins/*.dll",
]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

[tool.cibuildwheel]
build-frontend = { name = "uv", args = ["--verbose"] }
build = "cp312-*"
skip = "*-win32 *-manylinux_i686 *-musllinux_i686"
